--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,47 @@
   color: white;
 }
 
+/* App.css */
+.download-button {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.download-button:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid #4caf50;
+}
+
+.color-button {
+  background-color: #008cba; /* Blue */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.color-button:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid #008cba;
+}
+
 .App-link {
   color: #61dafb;
 }
